# fastauthmcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  ceramic.yaml.example  fastauthmcp.yaml.example  lab.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: architecture_proposal.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release.yml  security.yml  test.yml
.kiro/hooks/: readme-sync-check.kiro.hook
.kiro/specs/ceramic-framework/: design.md  requirements.md  tasks.md
.kiro/specs/fastauthmcp-framework/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/idp-resilience-and-adapters/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: readme-sync.md
ceramic/: __init__.py  authorization.py  config.py  config_loader.py  downstream.py  exceptions.py  identity.py  metrics.py  models.py  observability.py  resilience.py  security.py  server.py  sessions.py
ceramic/auth/: __init__.py  callback_server.py  claims.py  jwks_manager.py  oauth.py  token_storage.py
ceramic/auth/adapters/: __init__.py  base.py  entra.py  google.py  registry.py  rfc8693.py
ceramic/cli/: __init__.py
ceramic/middleware/: __init__.py  authentication.py  authorization.py  builtin.py  observability.py  pipeline.py  session.py
ceramic/testing/: __init__.py
docs/: GUIDE.md  demo.tape  index.html
docs/guides/: README.md  claude-desktop.md  cursor-ide.md  custom-agent.md  google-gemini.md  idp-auth0.md  idp-azure.md  idp-google.md  idp-keycloak.md  idp-okta.md  idp-zitadel.md  scenario-cloud.md  scenario-enterprise.md  scenario-local.md
examples/: auth_server.py  basic_server.py  headless_ceramic.yaml  headless_fastauthmcp.yaml  headless_server.py  migration_example.py  testing_example.py
examples/zitadel/: README.md  ceramic.yaml  ceramic.yaml.example  client.py  demo.py  demo_chat.html  fastauthmcp.yaml  live_client.py  mcp_client.py  petstore_server.py  server.py  test_server.py
fastauthmcp/: __init__.py  audit.py  authorization.py  config.py  config_loader.py  context.py  credential_mapping.py  downstream.py  exceptions.py  graceful_degradation.py  identity.py  metrics.py  models.py  multi_idp.py  observability.py  rate_limiting.py  resilience.py  schema_export.py  secrets.py  security.py  server.py  sessions.py
fastauthmcp/auth/: __init__.py  callback_server.py  claims.py  jwks_manager.py  oauth.py  token_storage.py
fastauthmcp/auth/adapters/: __init__.py  base.py  entra.py  google.py  registry.py  rfc8693.py
fastauthmcp/cli/: __init__.py
fastauthmcp/lab/: __init__.py  __main__.py  docker-compose.yml  gateway.py  scenario.py
fastauthmcp/lab/fixtures/: keycloak-realm.json
fastauthmcp/lab/flows/: __init__.py  base.py  client_credentials.py  direct_token.py
fastauthmcp/lab/providers/: __init__.py  auth0.py  azure.py  base.py  keycloak.py  mock.py  okta.py  zitadel.py
fastauthmcp/lab/runner/: __init__.py  discovery.py  engine.py  reporting.py
fastauthmcp/lab/scenarios/: __init__.py  test_keycloak.py  test_matrix.py  test_mock_provider.py  test_negative.py
fastauthmcp/lab/ui/: __init__.py  __main__.py  app.py  chat.py  scenarios.py
fastauthmcp/middleware/: __init__.py  authentication.py  authorization.py  builtin.py  observability.py  pipeline.py  session.py
fastauthmcp/testing/: __init__.py
scripts/: _setup.sh  debug-callback.sh  demo-headless.sh  demo-terminal.sh  demo-web.sh  demo.sh  dev-demo.sh  record-demo.sh  release.sh  setup-demo-recording.sh
tests/: conftest.py
tests/integration/: test_e2e_auth_flow.py  test_pipeline_flow.py
tests/properties/: test_circuit_breaker_properties.py  test_circuit_breaker_props.py  test_log_redactor_properties.py  test_tls_enforcer_properties.py
tests/unit/: test_adapters.py  test_authentication_middleware.py  test_authorization.py  test_cli.py  test_config_loader.py  test_config_models.py  test_exceptions.py  test_hot_reload.py  test_identity.py  test_identity_propagation.py  test_log_redactor.py  test_metrics_exporter.py  test_middleware_pipeline.py  test_models.py  test_oauth_resilient_integration.py  test_oauth_service.py  test_observability.py  test_pipeline_wiring.py  test_public_api.py  test_server.py  test_session_middleware.py  test_session_store.py  test_testing_utilities.py  test_tls_enforcer.py  test_token_storage.py
